# frontend-backend

./: .gitignore  README.md
backend/: .flake8  README.md  conftest.py  pyproject.toml
backend/app/: initial_data.py  main.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: a426faeeb362_add_website_table.py
backend/app/api/api_v1/routers/: articles.py  bias.py  users.py  websites.py
backend/app/api/api_v1/routers/tests/: test_users.py
backend/app/bias_scoper/: ai.py
backend/app/core/: auth.py  config.py  security.py
backend/app/crud/: user.py  website.py
backend/app/db/: crud.py
backend/app/models/: __init__.py  website.py
backend/app/models/__pycache__/: website.cpython-38.pyc.140208503199312
backend/app/schemas/: __init__.py  article.py  bias.py
backend/app/tests/: test_ai.py  test_env.py
backend/scripts/: scripts.py
frontend/: package-lock.json  package.json
frontend/src/views/: Login.tsx  SignUp.tsx
nginx/: nginx.conf
