[tool.poetry]
name = "app"
version = "0.0.1"
description = "The fast and efficient backend that powers Biascope."
authors = ["Ravi Riley <raviriley@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
alembic = "1.4.3"
Authlib = "0.14.3"
fastapi = "0.65.2"
celery = "5.0.0"
redis = "3.5.3"
httpx = "0.15.5"
ipython = "7.31.1"
itsdangerous = "1.1.0"
Jinja2 = "2.11.3"
psycopg2-binary = "2.8.6"
requests = "2.24.0"
SQLAlchemy = "1.3.19"
uvicorn = "0.12.1"
passlib = "1.7.2"
bcrypt = "3.2.0"
sqlalchemy-utils = "0.36.8"
python-multipart = "0.0.5"
pyjwt = "1.7.1"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
mypy = "^0.931"
isort = "^5.10.1"
bandit = "^1.7.1"
pylint = "^2.12.2"
black = "^21.12b0"
pytest = "7.0.1"
sqlalchemy-stubs = "^0.4"
flake8 = "^4.0.1"
autoflake = "^1.4"
pytest-cov = "3.0.0"
pep8-naming = "^0.12.1"
flake8-bugbear = "^22.1.11"


[tool.isort]
line_length = 120
use_parentheses = true
include_trailing_comma = true

[tool.black]
line_length = 120
exclude = '''
/(
    \.eggs         # exclude a few common directories in the
  | \.git          # root of the project
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | alembic
)/
'''

[tool.mypy]
plugins = ["pydantic.mypy", "sqlmypy"]

[tool.poetry.scripts]
lint = "scripts.scripts:lint"
l = "scripts.scripts:lint"
format = "scripts.scripts:format"
f = "scripts.scripts:format"
format-lint = "scripts.scripts:format_and_lint"
fl = "scripts.scripts:format_and_lint"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
